all base components and css styles

--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -1,7 +1,7 @@
 .app
-  display: grid
-  width: 100vw
+  color: #fff
+
+main > div
+  box-sizing: border-box
   height: 100vh
-  color: white
-  background: rgb(9,9,121)
-  background: linear-gradient(42deg, rgba(9,9,121,1) 0%, rgba(0,134,255,1) 100%)
+  padding-top: 40px
