--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -2,9 +2,21 @@
 
 .header
   background: rgba(0,0,0, .4)
-  border-bottom: 1px solid rgba(256, 256, 256, .7)
-  height: 60px
   display: grid
+  height: 40px
   grid-template-columns: 1fr 2fr 2fr
+  align-items: center
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+.appName
+  margin: 0
 .menuLink
   @extend .link
+  display: inline-block
+  margin-right: 10px
+.registrationBlock
+  text-align: right
+  button
+    margin-right: 15px
