--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -1,6 +1,7 @@
 .link
   color: #ffffff
   text-decoration: none
+  text-transform: uppercase
   transition: all .3s ease
   &:hover
-    border-bottom: 1px solid #fff
+    color: #cccccc
