--- a/src/components/MainPage/MainPage.module.sass
+++ b/src/components/MainPage/MainPage.module.sass
@@ -1,5 +1,8 @@
 .mainPage
   display: grid
   grid-template-columns: 1fr 1fr
+  align-items: center
   background: rgb(21,185,2)
   background: radial-gradient(circle, rgba(21,185,2,1) 0%, rgba(14,131,0,1) 100%)
+  .about
+    text-align: center
