--- a/src/components/LearningWords/LearningWords.module.sass
+++ b/src/components/LearningWords/LearningWords.module.sass
@@ -6,7 +6,9 @@
   background: radial-gradient(circle, rgba(2,107,185,1) 0%, rgba(0,44,131,1) 100%)
 .learnedWords
   text-align: right
-  margin: 0
+  margin-right: 40px
+  .successNumber
+    font-size: 20px
 h2
   text-align: center
 .questionBlock
