add state of answer Click

--- a/src/components/MainPage/MainPage.module.sass
+++ b/src/components/MainPage/MainPage.module.sass
@@ -6,3 +6,4 @@
   background: radial-gradient(circle, rgba(21,185,2,1) 0%, rgba(14,131,0,1) 100%)
   .about
     text-align: center
+    padding: 0 40px
