--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -4,8 +4,9 @@
   background: rgba(0,0,0, .4)
   display: grid
   height: 40px
-  grid-template-columns: 1fr 2fr 2fr
+  grid-template-columns: 1fr 4fr 2fr
   align-items: center
+  justify-items: center
   position: fixed
   top: 0
   left: 0
@@ -15,7 +16,7 @@
 .menuLink
   @extend .link
   display: inline-block
-  margin-right: 10px
+  margin-right: 25px
 .registrationBlock
   text-align: right
   button
