--- a/src/components/LearningWords/LearningWords.module.sass
+++ b/src/components/LearningWords/LearningWords.module.sass
@@ -4,7 +4,7 @@
   align-items: center
   background: rgb(2,107,185)
   background: radial-gradient(circle, rgba(2,107,185,1) 0%, rgba(0,44,131,1) 100%)
-.learnedWords
+.wordsSuccess
   text-align: right
   margin-right: 40px
   .successNumber
