--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -17,7 +17,7 @@
   @extend .link
   display: inline-block
   margin-right: 25px
-.registrationBlock
+.loginBlock
   text-align: right
-  button
-    margin-right: 15px
+  a
+    margin-right: 20px
