--- a/src/components/LearningWords/LearningWords.module.sass
+++ b/src/components/LearningWords/LearningWords.module.sass
@@ -6,7 +6,7 @@
   background: radial-gradient(circle, rgba(2,107,185,1) 0%, rgba(0,44,131,1) 100%)
 .wordsSuccess
   text-align: right
-  margin-right: 40px
+  margin-right: 10%
   .successNumber
     font-size: 20px
 h2
