--- a/src/components/LearningWords/FinishedPage/FinishedPage.module.sass
+++ b/src/components/LearningWords/FinishedPage/FinishedPage.module.sass
@@ -1,3 +1,7 @@
 .completed
   background: rgb(222,227,17)
   background: radial-gradient(circle, rgba(222,227,17,1) 0%, rgba(226,159,0,1) 100%)
+  display: flex
+  align-items: center
+  justify-content: center
+  flex-direction: column
