--- a/src/components/LearningWords/RepeatedPage/RepeatedPage.module.sass
+++ b/src/components/LearningWords/RepeatedPage/RepeatedPage.module.sass
@@ -2,6 +2,7 @@
   display: grid
   background: rgb(204,161,15)
   background: radial-gradient(circle, rgba(204,161,15,1) 0%, rgba(159,120,28,1) 100%)
+  padding-top: 100px
   h3
     text-align: center
   .results
@@ -24,3 +25,7 @@
     border: 1px solid #666
     border-radius: 3px
     width: 150px
+  button
+    width: 150px
+    height: 60px
+    margin: 0 auto
