added hoc withAuthRedirect

--- a/src/components/Auth/SignIn/SignIn.module.sass
+++ b/src/components/Auth/SignIn/SignIn.module.sass
@@ -30,7 +30,8 @@
     &:invalid
       border: 1px solid red
   button
-    margin-top: 20px
+    display: block
+    margin: 20px auto 0
 .error
   color: red
   font-weight: bold
