--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -17,6 +17,8 @@
   @extend .link
   display: inline-block
   margin-right: 25px
+.welcome
+  padding-right: 10px
 .loginBlock
   text-align: right
   a
