--- a/src/components/MainPage/MainPage.module.sass
+++ b/src/components/MainPage/MainPage.module.sass
@@ -1,9 +1,18 @@
+@import "src/sass/_templates"
 .mainPage
   display: grid
-  grid-template-columns: 1fr 1fr
+  grid-template-columns: 1fr 2fr
   align-items: center
   background: rgb(21,185,2)
   background: radial-gradient(circle, rgba(21,185,2,1) 0%, rgba(14,131,0,1) 100%)
   .about
     text-align: center
     padding: 0 40px
+
+.slider
+  max-width: 90%
+  box-shadow: 3px 3px 5px 5px rgba(0,0,0, .2)
+  h3
+    margin-bottom: 15px
+  a
+    margin-bottom: 10px
