--- a/src/components/Aside/AsideLink/AsideLink.module.sass
+++ b/src/components/Aside/AsideLink/AsideLink.module.sass
@@ -5,7 +5,8 @@
   transition: all 300ms ease-in-out
   &:hover
     transform: translateX(0px)
-    background-color: #0275db
+    background-color: #e39b00
+    border-radius: 5px 0 0 5px
     a
       color: white
 
