--- a/src/components/LearningVerbs/LearningVerbs.module.sass
+++ b/src/components/LearningVerbs/LearningVerbs.module.sass
@@ -1,3 +1,46 @@
+
+
 .learningVerbs
   background: rgb(183,2,185)
   background: radial-gradient(circle, rgba(183,2,185,1) 0%, rgba(68,0,131,1) 100%)
+  display: flex
+  flex-direction: column
+  align-content: center
+  align-items: center
+  justify-content: center
+  h2
+    margin-bottom: 15px
+  form
+    border: 1px solid #fff
+    border-radius: 5px
+    display: flex
+    padding: 20px 100px
+    flex-direction: column
+  .fieldsBlock
+    display: flex
+    flex-direction: column
+    align-content: space-between
+    label
+      margin-top: 25px
+      margin-bottom: 2px
+    .field
+      width: 100%
+      border: 1px solid #ccc
+      border-radius: 3px
+      transition: all .2s ease
+      padding: 2px
+
+      &:focus
+        border: 1px solid rgba(10,125,21,0.61)
+        outline: none
+        box-shadow: inset 0px 0px 4px 2px rgba(10,125,21,0.61)
+      &:invalid
+        border: 1px solid red
+
+    button
+      margin-top: 40px
+.fieldSuccess
+  border: 5px solid green
+.error
+  color: red
+  font-weight: bold
