learning Verbs refactor

--- a/src/components/LearningVerbs/LearningVerbs.module.sass
+++ b/src/components/LearningVerbs/LearningVerbs.module.sass
@@ -39,6 +39,13 @@
 
     button
       margin-top: 40px
+
+.activeVerb
+  text-align: center
+  text-transform: uppercase
+  padding: 5px
+  border: 1px solid #ffffff
+  border-radius: 5px
 .fieldSuccess
   border: 5px solid green
 .error
