--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -3,8 +3,23 @@
   text-decoration: none
   text-transform: uppercase
   transition: all .3s ease
+
   &:hover
     color: #cccccc
 
 .blockShadow
-  box-shadow: 0 0 10px rgba(0,0,0,0.5)
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
+
+.input
+  width: 100%
+  border: 1px solid #ccc
+  border-radius: 3px
+  margin-bottom: 10px
+  transition: all .2s ease
+  padding: 2px
+  &:focus
+    border: 1px solid rgba(10, 125, 21, 0.61)
+    outline: none
+    box-shadow: inset 0px 0px 4px 2px rgba(10, 125, 21, 0.61)
+  &:invalid
+    border: 1px solid red
