--- a/src/components/LearningVerbs/LearningVerbs.sass
+++ b/src/components/LearningVerbs/LearningVerbs.sass
@@ -1,5 +1,3 @@
-
-
 .learningVerbs
   background: rgb(183,2,185)
   background: radial-gradient(circle, rgba(183,2,185,1) 0%, rgba(68,0,131,1) 100%)
@@ -14,32 +12,33 @@
     border: 1px solid #fff
     border-radius: 5px
     display: flex
-    padding: 20px 100px
+    padding: 20px 150px
     flex-direction: column
-  .fieldsBlock
-    display: flex
-    flex-direction: column
-    align-content: space-between
+    button
+      margin-top: 20px
+      margin-bottom: 20px
     label
-      margin-top: 25px
-      margin-bottom: 2px
-    .field
+      margin-bottom: 10px
+      margin-top: 10px
+    input
       width: 100%
       border: 1px solid #ccc
       border-radius: 3px
       transition: all .2s ease
       padding: 2px
-
       &:focus
         border: 1px solid rgba(10,125,21,0.61)
         outline: none
         box-shadow: inset 0px 0px 4px 2px rgba(10,125,21,0.61)
       &:invalid
         border: 1px solid red
-
-    button
-      margin-top: 40px
-
+.verbInputBlock
+  width: 300px
+  position: relative
+  svg
+    position: absolute
+    top: 50px
+    right: -25px
 .activeVerb
   text-align: center
   text-transform: uppercase
