--- a/src/components/UI/Input/Input.module.sass
+++ b/src/components/UI/Input/Input.module.sass
@@ -1,4 +1,5 @@
 .Input
+  width: 100%
   margin-bottom: 15px
   label
     margin-bottom: 3px
@@ -13,7 +14,6 @@
     box-sizing: border-box
     border: 1px solid #bebebe
     border-radius: 3px
-    padding: 7px
     margin: 0 0 5px
     width: 100%
     outline: none
