--- a/src/components/Auth/SignIn/SignIn.module.sass
+++ b/src/components/Auth/SignIn/SignIn.module.sass
@@ -17,18 +17,7 @@
   label
     display: block
   input
-    width: 100%
-    border: 1px solid #ccc
-    border-radius: 3px
-    margin-bottom: 10px
-    transition: all .2s ease
-    padding: 2px
-    &:focus
-      border: 1px solid rgba(10,125,21,0.61)
-      outline: none
-      box-shadow: inset 0px 0px 4px 2px rgba(10,125,21,0.61)
-    &:invalid
-      border: 1px solid red
+    @extend .input
   button
     display: block
     margin: 20px auto 0
